--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
 <body>
     <header>
         <nav><ul>
-            <li class = 'txt'>Gmail</li>
-            <li class = 'txt'>Images</li>
-            <li><img src = 'images/outline_apps_black_24dp.png' id = 'apps'></li>
-            <li><img src = 'images/1x/outline_person_black_24dp.png' id = 'profile'></li>
+            <li class = 'txt'><a href = ''>Gmail</a></li>
+            <li class = 'txt'><a href = ''>Images</a></li>
+            <li><a href = ''><img src = 'images/outline_apps_black_24dp.png' id = 'apps'></a></li>
+            <li><a href = ''><img src = 'images/1x/outline_person_black_24dp.png' id = 'profile'></a></li>
         </ul></nav>
     </header>
 
     <main>
         <div class="logo">
-            <img src = 'https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'>
+            <a href = ''><img src = 'https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'></a>
         </div>
         <form>
             <div class="searchbar">
                 <input type = 'text' name = 'searchbar'>
             </div>
             <div class="buttons">
-                <div class="submit">
+                <a href = ''><div class="submit">
                     <input type = 'submit' value = 'Google Search'>
                 </div>
-                <div class="lucky">
+                </a>
+                <a href =''>
+                    <div class="lucky">
                     <input type = 'submit' value = "I'm feeling Lucky">
+                </a>
                 </div>
             </div>
-        </form>
-
-
-        <div class="links">
-
-            
-        </div>
-
-
+        </form> 
     </main>
+
+
+    <footer>
+        <a href = ''>India</a>
+    </footer>
 </body>
 </html>
