--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
     </main>
 
 
+
+
     <footer>
         <a href = ''>India</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+    <script src = 'script.js'></script>
 </body>
 </html>
